scripts: resync all build scripts
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ build:
     - ./build_deb.sh
     - du -sh deploy/linux-image-*.deb || true
     - ccache -s
-    - tar -cf ccache-$CI_PROJECT_NAME-$CI_COMMIT_BRANCH.tar.gz /root/.cache/ccache/
+    - tar -cf ccache-$CI_PROJECT_NAME-am33x-v5.15.tar.gz /root/.cache/ccache/
   artifacts:
     expire_in: 5 days
     name: "$CI_PROJECT_NAME-am33x-v5.15-$CI_JOB_ID"
