kernel v5.10.184-bone-rt-r72.1 rebase external git projects and rt: v5.10.184-rt90 BBDTBS: https://git.beagleboard.org/beagleboard/BeagleBoard-DeviceTrees/-/commit/9e6fc975fe613963a34932d34d15bbb104ad7486 RT: patch-5.10.184-rt90.patch.xz AUFS: https://github.com/sfjro/aufs-standalone/commit/accf229fa33ab8df2cdc6e9878220f9455cd6e6b WIRELESS_REGDB: https://git.kernel.org/pub/scm/linux/kernel/git/sforshee/wireless-regdb.git/commit/?id=9dc0800cdd7aeeae273b983973a1749f73008291 TI_AMX3_CM3: http://git.ti.com/gitweb/?p=processor-firmware/ti-amx3-cm3-pm-firmware.git;a=commit;h=fb484c5e54f2e31cf0a338d2927a06a2870bcc2c WPANUSB: https://git.beagleboard.org/beagleconnect/linux/wpanusb/-/commit/6aa9bf65b9d88a2c9a111e7b4aed03de2be9413d BCFSERIAL: https://git.beagleboard.org/beagleconnect/linux/bcfserial/-/commit/db467023bd136c97c2e13c3a8b9e41dbdfafbc66
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,10 @@
-image: robertcnelson/debian-bullseye-slim-ti-linux-kernel-dev:latest
+image: robertcnelson/debian-bookworm-slim-ti-linux-kernel-dev:latest
 
 cache:
-  key: "$CI_PROJECT_NAME-$CI_COMMIT_BRANCH"
+  key: "$CI_PROJECT_NAME-am33x-rt-v5.10"
   paths:
     - dl
-    - ccache-$CI_PROJECT_NAME-$CI_COMMIT_BRANCH.tar.gz
+    - ccache.tar.gz
 
 build:
   tags:
@@ -14,7 +14,7 @@ build:
     - . version.sh && echo $BRANCH
     - mkdir -p /root/.cache/ccache/ || true
     - ccache -s
-    - tar -xf ccache-$CI_PROJECT_NAME-$CI_COMMIT_BRANCH.tar.gz -C / || true
+    - tar -xf ccache.tar.gz -C / || true
     - ccache -s
     - cp -v system.sh.sample system.sh
     - echo "AUTO_BUILD=1" >> system.sh
@@ -23,10 +23,10 @@ build:
     - ./build_deb.sh
     - du -sh deploy/linux-image-*.deb || true
     - ccache -s
-    - tar -cf ccache-$CI_PROJECT_NAME-$CI_COMMIT_BRANCH.tar.gz /root/.cache/ccache/
+    - tar -cf ccache.tar.gz /root/.cache/ccache/
   artifacts:
     expire_in: 5 days
-    name: "$CI_PROJECT_NAME-$CI_COMMIT_BRANCH-$CI_JOB_ID"
+    name: "$CI_PROJECT_NAME-am33x-rt-v5.10-$CI_JOB_ID"
     paths:
       - "deploy/linux-image-*.deb"
 
