--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,10 @@
-image: robertcnelson/debian-bullseye-slim-ti-linux-kernel-dev:latest
+image: robertcnelson/debian-bookworm-slim-ti-linux-kernel-dev:latest
+
+cache:
+  key: "$CI_PROJECT_NAME-am33x-v5.16"
+  paths:
+    - dl
+    - ccache.tar.gz
 
 build:
   tags:
@@ -8,21 +14,19 @@ build:
     - . version.sh && echo $BRANCH
     - mkdir -p /root/.cache/ccache/ || true
     - ccache -s
-    - tar -xf /mnt/yocto-cache/ccache/ccache-$BRANCH.tar.gz -C / || true
+    - tar -xf ccache.tar.gz -C / || true
     - ccache -s
-    - cp -v /mnt/yocto-cache/toolchain/*.tar.xz /root/dl/gcc/ || true
     - cp -v system.sh.sample system.sh
     - echo "AUTO_BUILD=1" >> system.sh
     - echo "LINUX_GIT=/mnt/yocto-cache/git/linux-src/" >> system.sh
+    - git config --global --add safe.directory /mnt/yocto-cache/git/linux-src
     - ./build_deb.sh
     - du -sh deploy/linux-image-*.deb || true
     - ccache -s
-    - tar -cf ccache-$BRANCH.tar.gz /root/.cache/ccache/
-    - cp -v ccache-$BRANCH.tar.gz /mnt/yocto-cache/ccache/ || true
-    - cp -uv /root/dl/gcc/*.tar.xz /mnt/yocto-cache/toolchain/ || true
+    - tar -cf ccache.tar.gz /root/.cache/ccache/
   artifacts:
     expire_in: 5 days
-    name: "$CI_PROJECT_NAME-$CI_COMMIT_BRANCH-$CI_JOB_ID"
+    name: "$CI_PROJECT_NAME-am33x-v5.16-$CI_JOB_ID"
     paths:
       - "deploy/linux-image-*.deb"
 
