--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ cache:
   key: "$CI_PROJECT_NAME-am33x-rt-v5.15"
   paths:
     - dl
-    - ccache-$CI_PROJECT_NAME-am33x-rt-v5.15.tar.gz
+    - ccache.tar.gz
 
 build:
   tags:
@@ -14,7 +14,7 @@ build:
     - . version.sh && echo $BRANCH
     - mkdir -p /root/.cache/ccache/ || true
     - ccache -s
-    - tar -xf ccache-$CI_PROJECT_NAME-am33x-rt-v5.15.tar.gz -C / || true
+    - tar -xf ccache.tar.gz -C / || true
     - ccache -s
     - cp -v system.sh.sample system.sh
     - echo "AUTO_BUILD=1" >> system.sh
@@ -23,7 +23,7 @@ build:
     - ./build_deb.sh
     - du -sh deploy/linux-image-*.deb || true
     - ccache -s
-    - tar -cf ccache-$CI_PROJECT_NAME-am33x-rt-v5.15.tar.gz /root/.cache/ccache/
+    - tar -cf ccache.tar.gz /root/.cache/ccache/
   artifacts:
     expire_in: 5 days
     name: "$CI_PROJECT_NAME-am33x-rt-v5.15-$CI_JOB_ID"
