--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ image: robertcnelson/debian-bookworm-slim-ti-linux-kernel-dev:latest
 cache:
   key: "$CI_PROJECT_NAME-am33x-v6.3"
   paths:
-    - dl
+    - dl/*.tar.xz
     - ccache.tar.gz
 
 build:
@@ -26,7 +26,7 @@ build:
     - ccache -s
     - tar -cf ccache.tar.gz /root/.cache/ccache/
   artifacts:
-    expire_in: 5 days
+    expire_in: 14 days
     name: "$CI_PROJECT_NAME-am33x-v6.3-$CI_JOB_ID"
     paths:
       - "deploy/linux-image-*.deb"
