kernel v6.5-rc6-bone5.1 rebase external git projects BBDTBS: https://git.beagleboard.org/beagleboard/BeagleBoard-DeviceTrees/-/commit/d7178030b932f3f95ee2f556b8c71279c874ff1c WIRELESS_REGDB: https://git.kernel.org/pub/scm/linux/kernel/git/sforshee/wireless-regdb.git/commit/?id=ae1421fc746f456c6124d6265413c28460a85f31 TI_AMX3_CM3: http://git.ti.com/gitweb/?p=processor-firmware/ti-amx3-cm3-pm-firmware.git;a=commit;h=fb484c5e54f2e31cf0a338d2927a06a2870bcc2c WPANUSB: https://git.beagleboard.org/beagleconnect/linux/wpanusb/-/commit/6aa9bf65b9d88a2c9a111e7b4aed03de2be9413d BCFSERIAL: https://git.beagleboard.org/beagleconnect/linux/bcfserial/-/commit/db467023bd136c97c2e13c3a8b9e41dbdfafbc66
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ image: robertcnelson/debian-bookworm-slim-ti-linux-kernel-dev:latest
 cache:
   key: "$CI_PROJECT_NAME-am33x-v6.5"
   paths:
-    - dl
+    - dl/*.tar.xz
     - ccache.tar.gz
 
 build:
@@ -25,7 +25,7 @@ build:
     - ccache -s
     - tar -cf ccache.tar.gz /root/.cache/ccache/
   artifacts:
-    expire_in: 5 days
+    expire_in: 14 days
     name: "$CI_PROJECT_NAME-am33x-v6.5-$CI_JOB_ID"
     paths:
       - "deploy/linux-image-*.deb"
