scripts: resync all build scripts
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,20 +1,21 @@
-image: robertcnelson/debian-bullseye-slim-ti-linux-kernel-dev:latest
+image: robertcnelson/debian-bookworm-slim-ti-linux-kernel-dev:latest
 
 cache:
-  key: "$CI_PROJECT_NAME-$CI_COMMIT_BRANCH"
+  key: "$CI_PROJECT_NAME-am33x-rt-v5.4"
   paths:
-    - dl
-    - ccache-$CI_PROJECT_NAME-$CI_COMMIT_BRANCH.tar.gz
+    - dl/*.tar.xz
+    - ccache.tar.gz
 
 build:
   tags:
     - docker-amd64
   stage: build
   script:
+    - sed -i -e 's:gcc_8_arm:gcc_9_arm:g' version.sh
     - . version.sh && echo $BRANCH
     - mkdir -p /root/.cache/ccache/ || true
     - ccache -s
-    - tar -xf ccache-$CI_PROJECT_NAME-$CI_COMMIT_BRANCH.tar.gz -C / || true
+    - tar -xf ccache.tar.gz -C / || true
     - ccache -s
     - cp -v system.sh.sample system.sh
     - echo "AUTO_BUILD=1" >> system.sh
@@ -23,10 +24,9 @@ build:
     - ./build_deb.sh
     - du -sh deploy/linux-image-*.deb || true
     - ccache -s
-    - tar -cf ccache-$CI_PROJECT_NAME-$CI_COMMIT_BRANCH.tar.gz /root/.cache/ccache/
+    - tar -cf ccache.tar.gz /root/.cache/ccache/
   artifacts:
-    expire_in: 5 days
-    name: "$CI_PROJECT_NAME-$CI_COMMIT_BRANCH-$CI_JOB_ID"
+    expire_in: 28 days
+    name: "$CI_PROJECT_NAME-am33x-rt-v5.4-$CI_JOB_ID"
     paths:
       - "deploy/linux-image-*.deb"
-
