scripts: resync all build scripts
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ image: robertcnelson/debian-bookworm-slim-ti-linux-kernel-dev:latest
 cache:
   key: "$CI_PROJECT_NAME-am33x-v5.17"
   paths:
-    - dl
+    - dl/*.tar.xz
     - ccache.tar.gz
 
 build:
@@ -11,6 +11,7 @@ build:
     - docker-amd64
   stage: build
   script:
+    - sed -i -e 's:gcc_11_arm:gcc_11_arm:g' version.sh
     - . version.sh && echo $BRANCH
     - mkdir -p /root/.cache/ccache/ || true
     - ccache -s
@@ -25,8 +26,7 @@ build:
     - ccache -s
     - tar -cf ccache.tar.gz /root/.cache/ccache/
   artifacts:
-    expire_in: 5 days
+    expire_in: 28 days
     name: "$CI_PROJECT_NAME-am33x-v5.17-$CI_JOB_ID"
     paths:
       - "deploy/linux-image-*.deb"
-
