--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
-image: robertcnelson/debian-bookworm-slim-ti-linux-kernel-dev:latest
+image: robertcnelson/beagle-devscripts-kernel-debian-12-amd64
+# https://git.beagleboard.org/beagleboard/ci-docker-images
 
 cache:
   key: "$CI_PROJECT_NAME-am33x-v6.5"
