--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,8 +16,8 @@ build:
     - sed -i -e 's:gcc_13_arm:gcc_13_arm:g' version.sh
     - . version.sh && echo $BRANCH
     - mkdir -p /root/.cache/ccache/ || true
-#    - tar --use-compress-program=lz4 -xf ccache.tar.lz4 -C / || true
-    - tar -xf ccache.tar.gz -C / || true
+    - tar --use-compress-program=lz4 -xf ccache.tar.lz4 -C / || true
+#    - tar -xf ccache.tar.gz -C / || true
     - ccache -s
     - cp -v system.sh.sample system.sh
     - echo "AUTO_BUILD=1" >> system.sh
@@ -27,7 +27,7 @@ build:
     - du -sh deploy/linux-image-*.deb || true
     - ccache -s
     - tar --use-compress-program=lz4 -cf ccache.tar.lz4 /root/.cache/ccache/
-    - tar -cf ccache.tar.gz /root/.cache/ccache/
+#    - tar -cf ccache.tar.gz /root/.cache/ccache/
   artifacts:
     expire_in: 28 days
     name: "$CI_PROJECT_NAME-am33x-v6.6-$CI_JOB_ID"
