scripts: resync all build scripts
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,12 @@
-image: robertcnelson/debian-bookworm-slim-ti-linux-kernel-dev:latest
+image: robertcnelson/beagle-devscripts-kernel-debian-12-amd64
+# https://git.beagleboard.org/beagleboard/ci-docker-images
 
 cache:
   key: "$CI_PROJECT_NAME-am33x-v5.19"
   paths:
     - dl/*.tar.xz
     - ccache.tar.gz
+    - ccache.tar.lz4
 
 build:
   tags:
@@ -14,7 +16,7 @@ build:
     - sed -i -e 's:gcc_11_arm:gcc_13_arm:g' version.sh
     - . version.sh && echo $BRANCH
     - mkdir -p /root/.cache/ccache/ || true
-    - ccache -s
+#    - tar --use-compress-program=lz4 -xf ccache.tar.lz4 -C / || true
     - tar -xf ccache.tar.gz -C / || true
     - ccache -s
     - cp -v system.sh.sample system.sh
@@ -24,6 +26,7 @@ build:
     - ./build_deb.sh
     - du -sh deploy/linux-image-*.deb || true
     - ccache -s
+    - tar --use-compress-program=lz4 -cf ccache.tar.lz4 /root/.cache/ccache/
     - tar -cf ccache.tar.gz /root/.cache/ccache/
   artifacts:
     expire_in: 28 days
