--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,10 @@
 image: robertcnelson/beagle-devscripts-kernel-debian-12-amd64
 # https://git.beagleboard.org/beagleboard/ci-docker-images
 
+before_script:
+  - apt-get update -q
+  - apt-get install -y -q zstd
+
 cache:
   key: "$CI_PROJECT_NAME-am33x-v6.9"
   paths:
